feat: add admin page

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,13 @@
 body {
     font-family: "Poppins", "Arial", sans-serif;
 }
+
+/* Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
